--- a/components/DetailsPage.css
+++ b/components/DetailsPage.css
@@ -1,37 +1,4 @@
-#products {
-  list-style-type: none;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 2rem;
-  padding: 0;
-  margin: 0;
-}
-
-li {
-  background-color: #002b5e;
-  padding: 2rem;
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-  transition: box-shadow 0.3s ease;
-}
-
-body {
-  color: rgba(255, 255, 255, 0.737);
-}
-
-h2 {
-  text-shadow: 4px 4px 4px #aaa;
-  letter-spacing: 0.2rem;
-}
-
-img {
-  width: 300px;
-  height: auto;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-
-#products button {
+.product button {
   padding: 1rem 2rem;
   color: rgba(255, 255, 255, 0.737);
   outline: none;
@@ -44,8 +11,9 @@ img {
   cursor: pointer;
 }
 
-.product {
-  cursor: pointer;
+h2 {
+  text-shadow: 4px 4px 4px #aaa;
+  letter-spacing: 0.2rem;
 }
 
 .dark-blue-mesh {
@@ -87,79 +55,4 @@ img {
   /* Softened corners */
   padding: 20px; /* Added padding for a more spacious feel */
   transition: backdrop-filter 0.3s ease, box-shadow 0.3s ease;
-}
-
-/* for loading */
-
-/* HTML: <div class="loader"></div> */
-.loader-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 50vh;
-  width: 50vw;
-}
-.loader {
-  --c1: #673b14;
-  --c2: #f8b13b;
-  width: 40px;
-  height: 80px;
-  border-top: 4px solid var(--c1);
-  border-bottom: 4px solid var(--c1);
-  background: linear-gradient(
-      90deg,
-      var(--c1) 2px,
-      var(--c2) 0 5px,
-      var(--c1) 0
-    )
-    50%/7px 8px no-repeat;
-  display: grid;
-  overflow: hidden;
-  animation: l5-0 2s infinite linear;
-}
-.loader::before,
-.loader::after {
-  content: "";
-  grid-area: 1/1;
-  width: 75%;
-  height: calc(50% - 4px);
-  margin: 0 auto;
-  border: 2px solid var(--c1);
-  border-top: 0;
-  box-sizing: content-box;
-  border-radius: 0 0 40% 40%;
-  -webkit-mask: linear-gradient(#000 0 0) bottom/4px 2px no-repeat,
-    linear-gradient(#000 0 0);
-  -webkit-mask-composite: destination-out;
-  mask-composite: exclude;
-  background: linear-gradient(var(--d, 0deg), var(--c2) 50%, #0000 0) bottom /
-      100% 205%,
-    linear-gradient(var(--c2) 0 0) center/0 100%;
-  background-repeat: no-repeat;
-  animation: inherit;
-  animation-name: l5-1;
-}
-.loader::after {
-  transform-origin: 50% calc(100% + 2px);
-  transform: scaleY(-1);
-  --s: 3px;
-  --d: 180deg;
-}
-@keyframes l5-0 {
-  80% {
-    transform: rotate(0);
-  }
-  100% {
-    transform: rotate(0.5turn);
-  }
-}
-@keyframes l5-1 {
-  10%,
-  70% {
-    background-size: 100% 205%, var(--s, 0) 100%;
-  }
-  70%,
-  100% {
-    background-position: top, center;
-  }
 }
