Chore:for removing element from cart

--- a/components/OrderPage.css
+++ b/components/OrderPage.css
@@ -32,8 +32,12 @@ li {
 }
 
 img {
-  height: 20px;
-  width: 20px;
+  height: 30px;
+  width: 30px;
+}
+
+a {
+  cursor: pointer;
 }
 
 .dark-blue-mesh {
