--- a/components/OrderPage.css
+++ b/components/OrderPage.css
@@ -163,3 +163,18 @@ input {
 #modal-ok-btn:hover {
   background-color: #0056b3;
 }
+
+@media (max-width: 768px) {
+  ul li {
+    flex-direction: column;
+  }
+
+  ul li h2 {
+    font-size: 1rem;
+  }
+
+  form {
+    width: 70vw;
+    margin: 0 auto;
+  }
+}
