--- a/components/OrderPage.css
+++ b/components/OrderPage.css
@@ -34,6 +34,9 @@ li {
 img {
   height: 40px;
   width: 40px;
+  user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
 }
 
 a {
